# cc-mpc-extended-rlm

./: .gitignore  README.md  pyproject.toml  start_server.bat  start_server.sh
docs/: BOOST_CONTINUOUS_LEARNING_GUIDE.md  DEVELOPMENT_BEST_PRACTICES.md  KNOWLEDGE_BASE_SETUP_GUIDE.md  MEMORY_INTEGRATION_GUIDE.md  VSCODE_REMOTE_SSH_GUIDE.md  WEBSITE_GUIDE.md
examples/: .env.example  CLAUDE.md
examples/.claude/: REFERENCE.md  settings.local.json
examples/website/: build.py
src/enhanced_rlm/: __init__.py  chunker.py  config.py  haiku_client.py  ranker.py  search.py  server.py
src/enhanced_rlm/website/: __init__.py  config.py
tests/: __init__.py  test_chunker.py  test_knowledge_base_structure.py  test_ranker.py  test_search.py
